--- a/works_all.html
+++ b/works_all.html
@@ -88,7 +88,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         </p>
 
         <div class="flex_01">
-          <div class="flex_01_innner">
+          <div class="flex_01_inner">
             <div class="title_flex">
               <p class="works_all_title">#Website</p>
               <p class="pc_portfolio">ポートフォリオ</p>
@@ -107,7 +107,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             <p class="works_all_category">[ Category : design, coding ]</p>
           </div>
 
-          <div class="flex_01_innner">
+          <div class="flex_01_inner">
             <div class="title_flex">
               <p class="works_all_title">#Website</p>
               <p>Re LIFE様</p>
@@ -218,7 +218,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               <a href="#"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all04-80.jpg"
+                  src="./images/1x/works_all04@2x-80.jpg"
                   alt="作品の画像4"
               /></a>
             </div>
@@ -234,7 +234,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               <a href="#"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all05-80.jpg"
+                  src="./images/1x/works_all05@2x-80.jpg"
                   alt="作品の画像5"
               /></a>
             </div>
@@ -276,7 +276,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
       </section>
     </main>
 
-    <footer id="c-form">
+    <footer class="works_all_footer" id="c-form">
       <!-- あしらい5 -->
       <div class="roop_wrapper05">
         <!-- <img
